<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="150dp"
    android:background="@color/infowindowback"
    android:orientation="vertical">

    <Button
        android:id="@+id/infowindowbtn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/infowindowitem1"
        android:textSize="12sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/infowindowitem2"
        android:textSize="12sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/infowindowitem3"
        android:textSize="12sp" />
</LinearLayout>
