<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@+style/myactivityStyle"
    tools:context="com.skyfin.baidumapapi.activity.PoiSearchActivity">

    <com.baidu.mapapi.map.MapView
        android:id="@+id/bmapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true" />

    <Button
        android:id="@+id/bussearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/bussearch"
        android:textSize="12sp" />

    <Button
        android:id="@+id/routesearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/bussearch"
        android:text="@string/routesearch"
        android:textSize="12sp" />

    <Button
        android:id="@+id/suggestionSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/routesearch"
        android:text="@string/suggestionSearch"
        android:textSize="12sp" />
    <Button
        android:id="@+id/poiSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/suggestionSearch"
        android:text="@string/poiSearch"
        android:textSize="12sp" />
</RelativeLayout>
